v5.3.5
- Updated - FSE Folder naming updated to match upcoming WP 5.9
- Fixed - Temporary fixed Core/Pattern block to render shortcodes/emoji (submitted bug report)

v5.3.4
- Updated - Minimum required WP version to 5.9-beta2 failsafe to theme updates on WP 5.8.2+

v5.3.3
- Updated - Global cleanup / JSON cleanup / Clean old changelog before block-based update
- Updated - CSS utilities class suggestion added to Gutenberg Class extentsion from Styles\Utilities class
- Updated - Core/Navigation and Core/Navigation-Link cleanup and styles
- Updated - Header/Footer template parts will now use pattern block
- Updated - Comment blocks naming in Gutenberg Styles extension (remove previous "post" prefix)
- Updated - theme.json template parts naming
- Updated - gutenberg_ prefixed functions renamed to wp_ (in progress)
- Updated - Normalized some filters usage / block wrap context (to block classname)
- Updated - Forms.css to chunk, loaded only by blocks with inputs (comment form, search and login form)
- Removed - Navigation Area block used in header (will be deprecated until WP 5.9)
- Added - Header/Footer/Query patterns and show them into block types
- Added - Threaded Comments Template
- Added - Comments Pagination
- Added - Block Patterns index.json to extend glob registration with custom pattern attributes (description, name etc)

v5.3.2
- Removed - Gutenberg hide title plugin (and related PHP code) - not necessary in a FSE theme
- Fixed - Navigation offcanvas background inheritance
- Fixed - Height of Gutenberg Editor mode with Codemirror
- Fixed - Core/Image block attributes parsing for styles (output was reset when processing border radius)
- Added - Core/Template Part filter support to maintain experimental layout after upcomming Gutenberg plugin update (avoid additional group wrapper)

v5.3.1
- Updated - Site logo width on header template part
- Updated - CORE/Navigation - improved styleing for dropdowns
- Updated - CORE/Navigation - blockGap support