@@ -4,7 +4,7 @@
 		{
 			"type": "info",
 			"title": "WP 5.8.2 vs Latest update!",
-			"content": "Before updating to latest version please install WP 5.9.2-beta version and update your Gutenberg plugin as well - otherwise the site will break."
+			"content": "Before updating to latest version please install WP 5.9.3-beta version and update your Gutenberg plugin as well - otherwise the site will break."
 		},
 		{
 			"type": "info",
